--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
        accurateTrackBounce:true
   });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/96385729" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -49,8 +48,8 @@
           </li>
           <li class="links__link">
             <p class="links__title">Эл. почта</p>
-            <a class="linsk__link" href="mailto:toshagood@yandex.ru"
-              >toshagood@yandex.ru</a
+            <a class="linsk__link" href="mailto:tosha_good@mail.ru"
+              >tosha_good@mail.ru</a
             >
           </li>
           <li class="links__link">
@@ -73,10 +72,6 @@
           <li class="links__link">
             <p class="links__title">Возраст</p>
             <a class="linsk__link" >24 Года</a>
-          </li>
-          <li class="links__link">
-            <p class="links__title">Подготовка</p>
-            <a class="linsk__link" >Профессиональная</a>
           </li>
         </ul>
       </ul>
